# infragpt

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES.md  GITHUB_INTEGRATION_IMPLEMENTATION_PLAN.md  Makefile  Procfile  README.md  SECURITY.md  bump_version.py  pyproject.toml  requirements-dev.txt  setup.py  test_config.py  test_history.py  test_run.py  uv.toml
.github/workflows/: cli-deploy.yml  codeql.yml  deploy.yml  publish.yml  test.yml  website-deploy.yml
cli/: CLAUDE.md  __init__.py  __main__.py  cli.py  config.py  llm.py  prompts.py  pyproject.toml
cli/src/infragpt/: __init__.py  agent.py  api_client.py  auth.py  bump_version.py  config.py  container.py  encryption.py  history.py  llm_adapter.py  main.py  prompts.py  shell.py  tools.py
cli/src/infragpt/images/sandbox/: Dockerfile
cli/src/infragpt/llm/: README.md  __init__.py  auth.py  base.py  client.py  errors.py  exceptions.py  models.py  prompts.py  router.py
cli/src/infragpt/llm/providers/: anthropic_provider.py  openai_provider.py
cli/tests/: test_api_client.py  test_auth_strict.py
docs/: docs.json  index.mdx  quickstart.mdx
docs/api-reference/: introduction.mdx
infragpt/: __init__.py  __main__.py  cli.py  llm.py  prompts.py
infragpt/cli/: __init__.py  commands.py  options.py
infragpt/core/: __init__.py  commands.py  llm.py  prompt.py
infragpt/ui/: __init__.py  console.py  display.py  prompts.py
infragpt/utils/: __init__.py  config.py  history.py  logging.py  validation.py
infragpt/website/public/: install.sh
llm/: __init__.py  auth.py  client.py  models.py
server/api/: ROADMAP.md  go.mod  spec.go
server/api/docs/: CONTRIBUTING.md  IMPLEMENTATION.md
services/: CLAUDE.md
services/agent/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
services/agent/src/agents/: __init__.py  base.py  conversation.py  main_agent.py  rca.py  registry.py
services/agent/src/api/: health.py
services/agent/src/client/go/: README.md  client.go  go.mod  go.sum
services/agent/src/client/go/proto/: agent.pb.go  agent_grpc.pb.go
services/agent/src/config/: logging.py  settings.py
services/agent/src/grpc/: handlers.py  interceptors.py  server.py
services/agent/src/integrations/: __init__.py  backend_client.py  infragpt_client.py  reply_handler.py
services/agent/src/llm/: __init__.py  client.py  models.py
services/agent/src/models/: agent.py  context.py  intent.py
services/agent/src/proto/: agent.proto  agent_pb2.py  agent_pb2_grpc.py  generate.sh
services/agent/src/tools/: __init__.py  base.py  registry.py
services/agent/tests/: test_agents.py  test_health.py
services/app/: .env.example  CLAUDE.md  INTEGRATION_MANAGER_IMPLEMENTATION_PLAN.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
services/app/playground/: package-lock.json  test.js  test.js.map
services/app/src/: App.tsx  main.tsx  vite-env.d.ts
services/backend/: .gitignore  CLAUDE.md  README.md  conversation.go  go.mod  go.sum  identity.go  integration.go  sqlc.json
services/backend/backendapi/: grpc_server.go  handler.go
services/backend/cmd/: main.go
services/console/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.console.json  tsconfig.json  tsconfig.node.json  vite.config.ts
services/infragpt/: .env.example  .gitignore  README.md  ROADMAP.md  config-template.yaml  conversation.go  go.mod  go.sum  identity.go  integration.go  spec.go  sqlc.json
services/infragpt/infragptapi/client/python/: .gitignore  README.md  __init__.py  generate.sh  pyproject.toml  setup.py
services/infragpt/infragptapi/client/python/infragptapi/: __init__.py  client.py  exceptions.py
services/mcp/: PLAN.md  go.mod
services/playground/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  github.go  llm.go  main.go  spec.go
services/website/: .prettierrc.json  CLAUDE.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  tailwind.config.cjs
services/wwwroot/: index.html
test-integration/: go.mod  test_integration_flow.go
tests/: README.md  __init__.py  conftest.py
tests/core/: test_commands.py
tests/utils/: helpers.py  test_config.py  test_history.py
website/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs
(+429 files in other folders)
