[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infragpt"
version = "0.1.44"
description = "InfraGPT is an AI assistant for interactively managing your infrastructure."
readme = "README.md"
authors = [{ name = "Priyanshu Jain", email = "ipriyanshujain@gmail.com" }]
requires-python = ">=3.13"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "langchain-core>=0.1.18",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.1",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "click>=8.1.7",
    "pyperclip>=1.8.2",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/priyanshujain/infragpt"

[project.scripts]
infragpt = "infragpt.main:cli"



[dependency-groups]
dev = [
    "pytest>=7.4.3",
]
