[project]
name = "backend-agent"
version = "0.1.0"
description = "Backend Agent Service - AI-powered infrastructure management agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "grpcio",
    "grpcio-tools",
    "grpcio-reflection",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "structlog",
    "langchain",
    "litellm",
    "backendapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.uv.sources]
backendapi = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=0.21.1",
]
