[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infragptapi"
version = "1.0.0"
description = "Python client for InfraGPT service"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "InfraGPT Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
]

[tool.setuptools.packages.find]
include = ["infragptapi*"]